--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4"><img src="images/svg/newsicon.svg" width="40"; />New York Times Search</h1>
+          <h1 class="display-4"><img src="images/svg/newsicon.svg" width="40"; /> New York Times</h1>
         </div>
       </div>
       <div class="card">
